apply plugin: 'idea'
apply plugin: 'kotlin'

repositories {
    mavenCentral()
}

apply plugin: 'idea'

sourceCompatibility = '1.7'
targetCompatibility = '1.7'

buildscript {
    project.ext.set("kotlinVersion", "1.0.2")
    project.ext.set("junitVersion", "4.12")

    repositories {
        mavenCentral()
        maven {
            url 'http://oss.sonatype.org/content/repositories/snapshots'
        }
    }
    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}"
    }
}

apply plugin: 'java'
apply plugin: 'kotlin'

configurations {
    include_unpacked_jars /// used when packing 'spek.jar' for download
}

def junitDependency = "junit:junit:${junitVersion}"
repositories {
    maven {
        url 'http://oss.sonatype.org/content/repositories/snapshots'
    }
}
dependencies {
    compile "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
    compile "org.jetbrains.kotlin:kotlin-runtime:${kotlinVersion}"
    compile "org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}"
    compile "org.jetbrains.kotlin:kotlin-test:${kotlinVersion}"
    compile junitDependency
    include_unpacked_jars junitDependency
    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
}


tasks.withType(Jar) { task ->
    task.manifest {
        attributes \
            'Implementation-Title': "Spek", \
            'Implementation-Version': rootProject.version, \
            'Implementation-Kotlin-Version': kotlinVersion, \
            'Build-Time': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
    }
}

test {

    // set heap size for the test JVM(s)
    minHeapSize = "128m"
    maxHeapSize = "512m"

    // set JVM arguments for the test JVM(s)
    jvmArgs '-XX:MaxPermSize=256m'
}

apply from: 'build.gradle'
